--- a/03.5 - Notas para la Tarea 1.ipynb
+++ b/03.5 - Notas para la Tarea 1.ipynb
@@ -4,11 +4,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
     "from pylab import *\n",
+    "%run integradores.ipynb\n",
     "%matplotlib inline"
    ]
   },
@@ -46,39 +47,6 @@
     "    subplot(122)\n",
     "    plot(x,g(f,x,i))\n",
     "show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "def int_rk4(ec,p_ini,x, args = 0,h=0.001):\n",
-    "    if abs(x[1]-x[0])<=5.*h:\n",
-    "        h = abs(x[1]-x[0])/100\n",
-    "    tiempos = arange(x[0],x[1]+h,h)\n",
-    "    sol = zeros((len(tiempos),len(p_ini)))\n",
-    "    sol[0,:] = p_ini\n",
-    "    \n",
-    "    if args == 0:\n",
-    "        for i in xrange(len(tiempos)-1):\n",
-    "            k1 = ec(sol[i,:],tiempos[i])\n",
-    "            k2 = ec(sol[i,:]+0.5*h*k1,tiempos[i]+0.5*h)\n",
-    "            k3 = ec(sol[i,:]+0.5*h*k2,tiempos[i]+0.5*h)\n",
-    "            k4 = ec(sol[i,:]+h*k3,tiempos[i]+h)\n",
-    "            sol[i+1,:] = sol[i,:] + (h/6.0)*(k1+2*k2+2*k3+k4)\n",
-    "        return tiempos,sol\n",
-    "    else:\n",
-    "        for i in xrange(len(tiempos)-1):\n",
-    "            k1 = ec(sol[i,:],tiempos[i], args)\n",
-    "            k2 = ec(sol[i,:]+0.5*h*k1,tiempos[i]+0.5*h, args)\n",
-    "            k3 = ec(sol[i,:]+0.5*h*k2,tiempos[i]+0.5*h, args)\n",
-    "            k4 = ec(sol[i,:]+h*k3,tiempos[i]+h, args)\n",
-    "            sol[i+1,:] = sol[i,:] + (h/6.0)*(k1+2*k2+2*k3+k4)\n",
-    "        return tiempos,sol"
    ]
   },
   {
@@ -181,35 +149,15 @@
     "trayectoria[0,:]=array(inicio)\n",
     "\n",
     "for i in range(N-1):\n",
-    "    t,sol=int_rk4(ec_mov,trayectoria[i,:],[0,mi_dt],fricV1)\n",
-    "    \n",
+    "    t,sol=int_rk4(ec_mov,trayectoria[i,:],[0,mi_dt],fric=fricV2)\n",
     "    if sol[-1,:][1]<0:\n",
-    "        print \"buscando punto de rebote\"\n",
-    "        dt_busqueda = mi_dt/2\n",
-    "        y_izq = trayectoria[i,:]\n",
-    "        t,sol = int_rk4(ec_mov,trayectoria[i,:],[0,dt_busqueda],fricV1)\n",
-    "        y_med = sol[-1,:]\n",
-    "        \n",
-    "        while abs(y_izq[1]) > 1e-5:\n",
-    "            if y_izq[1]*y_med[1] < 0.0:\n",
-    "                reinicio = y_izq\n",
-    "            else:\n",
-    "                reinicio = y_med\n",
-    "            dt_busqueda = dt_busqueda/2\n",
-    "            t,sol = int_rk4(ec_mov,reinicio,[0,dt_busqueda],fricV1)\n",
-    "            y_izq = reinicio\n",
-    "            y_med = sol[-1,:]\n",
-    "            \n",
-    "        print y_izq\n",
+    "        y_izq = rebote(trayectoria[i,:],mi_dt)\n",
     "        trayectoria[i+1,:] = y_izq\n",
     "        trayectoria[i+1,:][3] *= -1\n",
-    "    \n",
     "    else:\n",
     "        trayectoria[i+1,:] = sol[-1,:]\n",
-    "    \n",
-    "tfv,sol_fv=int_rk4(ec_mov,inicio,[0,1],fricV1)    \n",
-    "plot(sol_fv[:,0],sol_fv[:,1],'o')    \n",
-    "plot(trayectoria[:,0],trayectoria[:,1],'--')\n",
+    "        \n",
+    "plot(trayectoria[:,0],trayectoria[:,1],'o-')\n",
     "show()"
    ]
   },
@@ -217,43 +165,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "p = [0,0,5,5]\n",
-    "N = 500\n",
-    "trayectoria = zeros((N,len(p)))\n",
-    "mi_dt = 0.1\n",
-    "trayectoria[0,:] = array(p)\n",
-    "for i in range(N-1):\n",
-    "    t, sol = int_rk4(ec_mov,trayectoria[i,:],[0,mi_dt],fricV1)\n",
-    "    if sol[-1,:][1] < 0:\n",
-    "        dt_busqueda = mi_dt/2\n",
-    "        y_izq = trayectoria[i,:]\n",
-    "        t, sol = int_rk4(ec_mov,trayectoria[i,:],[0,dt_busqueda],fricV1)\n",
+    "def rebote(r_v_i,mi_dt,**kwargs):\n",
+    "    dt_busqueda = mi_dt/2\n",
+    "    y_izq = r_v_i\n",
+    "    t,sol = int_rk4(ec_mov,trayectoria[i,:],[0,dt_busqueda],**kwargs)\n",
+    "    y_med = sol[-1,:]\n",
+    "    while abs(y_izq[1]) > 1e-5:\n",
+    "        if y_izq[1]*y_med[1] < 0.0:\n",
+    "            reinicio = y_izq\n",
+    "        else:\n",
+    "            reinicio = y_med\n",
+    "        dt_busqueda = dt_busqueda/2\n",
+    "        t,sol = int_rk4(ec_mov,reinicio,[0,dt_busqueda],**kwargs)\n",
+    "        y_izq = reinicio\n",
     "        y_med = sol[-1,:]\n",
-    "\n",
-    "        while abs(y_izq[1])>1e-5:\n",
-    "            dt_busqueda = dt_busqueda/2\n",
-    "            if y_izq[1]*y_med[1] < 0:\n",
-    "                reinicio = y_izq\n",
-    "            else:\n",
-    "                reinicio = y_med\n",
-    "            t, sol = int_rk4(ec_mov,reinicio,[0,dt_busqueda],fricV1)\n",
-    "            \n",
-    "            y_izq = reinicio\n",
-    "            y_med = sol[-1,:]\n",
-    "            \n",
-    "        trayectoria[i+1,:] = y_izq\n",
-    "        trayectoria[i+1,:][3] *= -1.\n",
-    "    else:\n",
-    "        trayectoria[i+1,:] = sol[-1,:]\n",
-    "\n",
-    "plot(trayectoria[:,0],trayectoria[:,1], label=\"Te odio Diego\")\n",
-    "plot(sol_fv[:,0],sol_fv[:,1], label=\"Por siempre\")\n",
-    "legend()\n",
-    "show()"
+    "    return y_izq"
    ]
   }
  ],
